--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,4 @@
 COMMAND_START=[""]
 ADAPTER="Console"
-ONEBOT_API_ROOTS={"2073154878": "http://127.0.0.1:8080/"}
-
+SUPERUSERS=["2815091564"]
 GOCQ_ACCOUNTS=[{"uin": "2073154878","password": "20030401zh.","protocol":0}]
-
