--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,6 @@ adapters = [
     { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
     { name = "Console", module_name = "nonebot.adapters.console" }
 ]
-plugins = ["nonebot-plugin-csgo-case-simulator", "nonebot_plugin_picstatus", "nonebot_plugin_gocqhttp"]
+plugins = [ "nonebot_plugin_picstatus", "nonebot_plugin_gocqhttp", "nonebot_plugin_htmlrender"]
 plugin_dirs = ["src/plugins"]
-builtin_plugins = []
+builtin_plugins = ['echo']
