--- a/.env.prod
+++ b/.env.prod
@@ -2,3 +2,6 @@ COMMAND_START=[""]
 ADAPTER="Console"
 SUPERUSERS=["2815091564"]
 GOCQ_ACCOUNTS=[{"uin": "2073154878","password": "20030401zh.","protocol":0}]
+GOCQ_PROCESS_KWARGS={"max_restarts":1}
+integral_sigin_in=5
+test=2
