--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,6 @@ adapters = [
     { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
     { name = "Console", module_name = "nonebot.adapters.console" }
 ]
-plugins = [ "nonebot_plugin_picstatus", "nonebot_plugin_gocqhttp", "nonebot_plugin_htmlrender"]
+plugins = [ "nonebot_plugin_picstatus", "nonebot_plugin_gocqhttp", "nonebot_plugin_htmlrender", "nonebot_plugin_wordcloud"]
 plugin_dirs = ["src/plugins"]
 builtin_plugins = ['echo']
