抽老婆完成，待测试（因为被风控了）

--- a/.env.prod
+++ b/.env.prod
@@ -1,7 +1,6 @@
 COMMAND_START=[""]
 ADAPTER="Console"
 SUPERUSERS=["2815091564"]
-GOCQ_ACCOUNTS=[{"uin": "2073154878","password": "20030401zh.","protocol":0}]
+GOCQ_ACCOUNTS=[{"uin": "2073154878","protocol":2}]
 GOCQ_PROCESS_KWARGS={"max_restarts":1}
-integral_sigin_in=5
-test=2
+
