完成复读，下一步应该是完成帮助插件

--- a/.env.prod
+++ b/.env.prod
@@ -3,3 +3,8 @@ ADAPTER="Console"
 SUPERUSERS=["2815091564"]
 GOCQ_ACCOUNTS=[{"uin": "2073154878","protocol":2}]
 GOCQ_PROCESS_KWARGS={"max_restarts":1}
+repeat_max_record_count = 3
+repeat_record_random_min = 0
+repeat_record_random_max = 2
+repeat_reply_random_min = 0
+repeat_reply_random_max = 2
