帮助插件完成部分

--- a/.env.prod
+++ b/.env.prod
@@ -8,3 +8,8 @@ repeat_record_random_min = 0
 repeat_record_random_max = 2
 repeat_reply_random_min = 0
 repeat_reply_random_max = 2
+help_excluded = ["峯驰物流"]
+
+
+# 是否只能由SuperUsers触发指令（可空）
+PS_ONLY_SU=True
