--- a/.env.prod
+++ b/.env.prod
@@ -1,7 +1,7 @@
 COMMAND_START=[""]
 ADAPTER="Console"
-SUPERUSERS=["2815091564"]
-GOCQ_ACCOUNTS=[{"uin": "430934909","protocol":2}]
+SUPERUSERS=[""]
+GOCQ_ACCOUNTS=[{"uin": "","protocol":2}]
 GOCQ_PROCESS_KWARGS={"max_restarts":1}
 repeat_max_record_count = 300
 repeat_record_random_min = 50
