--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,6 @@
 COMMAND_START=[""]
-ADAPTER="Console"
 SUPERUSERS=["2815091564"]
+NICKNAME=["麦昆"]
 GOCQ_ACCOUNTS=[{"uin": "430934909","protocol":2}]
 GOCQ_PROCESS_KWARGS={"max_restarts":1}
 repeat_max_record_count = 300
@@ -9,6 +9,7 @@ repeat_record_random_max = 80
 repeat_reply_random_min = 40
 repeat_reply_random_max = 60
 help_excluded = ["峯驰物流"]
+PORT=8080
 
 
 # 是否只能由SuperUsers触发指令（可空）
